--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@smastrom/react-rating": "^1.5.0",
     "@tailwindcss/vite": "^4.0.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-loading-indicators": "^1.0.0",
+    "react-rating-stars-component": "^2.2.0",
+    "tailwind-scrollbar": "^4.0.0",
     "tailwindcss": "^4.0.6"
   },
   "devDependencies": {
